Update End of August.

--- a/papers/GHK_ESPS.bib
+++ b/papers/GHK_ESPS.bib
@@ -1,9 +1,13 @@
-@Report{Gornemann2022_WP,
-  author       = {Gornemann, Nils and Hildebrand, Sebastian and Kuester, Keith},
-  date         = {2022-12},
-  title        = {Limited energy supply, sunspots, and monetary policy},
-  type         = {ECONtribute Discussion Paper},
-  number       = {215},
-  abstract     = {A common assumption in macroeconomics is that energy prices are determined in a world-wide, rather frictionless market. This no longer seems an adequate description for the situation that much of Europe currently faces. Rather, one reading is that shortages exist in the quantity of energy available. Such limits to the supply of energy mean that the local price of energy is affected by domestic economic activity. In a simple open-economy New Keynesian setting, the paper shows conditions under which energy shortages can raise the risk of self-fulfilling fluctuations. A firmer focus of the central bank on input prices (or on headline consumer prices) removes such risks.},
-  keywords     = {energy crisis, macroeconomic instability, sunspots, monetary policy, heterogeneous households},
+@article{GORNEMANN2024104823,
+  title    = {Limited (energy) supply, monetary policy, and sunspots},
+  journal  = {European Economic Review},
+  volume   = {168},
+  pages    = {104823},
+  year     = {2024},
+  issn     = {0014-2921},
+  doi      = {https://doi.org/10.1016/j.euroecorev.2024.104823},
+  url      = {https://www.sciencedirect.com/science/article/pii/S0014292124001521},
+  author   = {Nils Gornemann and Sebastian Hildebrand and Keith Kuester},
+  keywords = {Supply constraints, Heterogeneous households, Monetary transmission, Transfer multiplier, Sunspots},
+  abstract = {In a simple New Keynesian open economy setting, we analyze how local input shortages influence policy transmission and equilibrium determinacy. Shortages increase the elasticity of the local price of the scarce factor to domestic economic activity, affecting the cyclicality of marginal costs and incomes. As a result, the slope of both the Phillips and the IS curve is altered, crucially influencing monetary and fiscal policy transmission. These changes are affected by factor ownership and propensities to consume. Theoretically, shortages can also raise the risk of self-fulfilling fluctuations if a rising price of the constrained factor boosts incomes for agents with high propensities to consume. We illustrate these channels for the 2022 German energy crisis.}
 }
